Bug 152495 - crash when closing ruby (phonetic guide) dialog with escape (gtk3)
Summary: crash when closing ruby (phonetic guide) dialog with escape (gtk3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0.0.beta2 target:7.6.0 tar...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-12-13 16:38 UTC by Christian Lohmaier
Modified: 2022-12-14 19:46 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: 12a6a8a8-8900-4001-a499-546e39302e70


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Lohmaier 2022-12-13 16:38:06 UTC
Description:
LO crashes when dismissing the phonetic guide dialog with escape. closing the dialog using the button doesn't trigger a crash.

Steps to Reproduce:
1. Enable support for asian text layout in Options → language
2. you don't even have to type anything in the document, just pick "Format | Phonetic guides" from the menu
3. hit escape → crash

Actual Results:
LO crashes, and offers to send crash report and the document recovery

Expected Results:
The dialog should just close and nothing else :-)


Reproducible: Always


User Profile Reset: No

Additional Info:
[Information automatically included from LibreOffice]
Locale: de
Module: TextDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes
Comment 1 Christian Lohmaier 2022-12-13 16:45:04 UTC
Further info: Seems limited to the GTK vclplugin, no crash when using SAL_USE_VCLPLUGIN=gen
Comment 2 Xisco Faulí 2022-12-13 17:58:01 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2021-03-05 16:13:19 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2021-03-05 21:57:42 +0100
commit 9ffd28c32a301141a26e41ddd0cf485a562c83bb (patch)
tree 7853d7350feb89c70019226411c58874090e0f37
parent 74b5218b68469c29f93436b308e85a20140ce9dd (diff)
use container_focus_changed instead of toplevel_focus_changed

Bisected with: bibisect-linux64-7.2

Adding Cc: to Caolán McNamara
Comment 3 Julien Nabet 2022-12-13 18:40:17 UTC
Just for the record, on pc Debian x86-64 with master sources updated today (9a0e31fcb7fa871fa63abe106d83a04df2f4c74e) + brand new LO profile + gtk3,  I don't reproduce this.

I just noticed this:
warn:legacy.osl:121477:121477:sfx2/source/control/bindings.cxx:1056: suspicious Toggle-Slot
Comment 4 Caolán McNamara 2022-12-13 20:00:48 UTC
Doesn't crash for under x11 or wayland, and nothing seen when trying under valgrind.

Can I get a backtrace from someone who can reproduce it?
Comment 5 Xisco Faulí 2022-12-14 11:17:17 UTC
I can't reproduce it with a debug build but I do with the bisect repositories...
Comment 6 Caolán McNamara 2022-12-14 11:26:26 UTC
I can reproduce in a release build, that'll do
Comment 7 Commit Notification 2022-12-14 19:39:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/a5e9c08da60b66d91517633b9a677ebb84350ca9

Resolves: tdf#152495 crash on dismissing ruby dialog with ESC

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-12-14 19:39:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e5d68c4a4ad953d4d7d99103ee2181be38cd025b

Resolves: tdf#152495 crash on dismissing ruby dialog with ESC

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2022-12-14 19:40:12 UTC
done in trunk, backport to 7-4 in gerrit
Comment 10 Commit Notification 2022-12-14 19:46:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/edaed837865eed2ff2025bf370f3f78b82dc415d

Resolves: tdf#152495 crash on dismissing ruby dialog with ESC

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.