Resolves: tdf#152495 crash on dismissing ruby dialog with ESC

Change-Id: I26af008a7ee7b105255a1aaacff7ff30813172a4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144174
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>